<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/activity_entermobile_appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/activity_profileuser_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/Entermobilenumber"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/activity_entermobile_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_entermobile_appbarlayout"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/PleaseEnterMobile"
        android:textColor="@color/colorBlackEighty"
        android:textSize="21sp" />

    <LinearLayout
        android:id="@+id/entermobilelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_entermobile_textview"
        android:gravity="center"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="end"
            android:padding="10dp"
            android:text="@string/countrycode"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:padding="5dp">

            <EditText
                android:id="@+id/activity_entermobile_et_mobilenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:hint="@string/Example"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="10"
                android:padding="10dp"
                android:textColorHint="@color/hintcolor"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/activity_entermobile_iv_clear"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_clear_grey_18dp" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>


        <TextView
            android:id="@+id/activity_entermobile_tv_clickhere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_below="@+id/entermobilelayout"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:gravity="center"
            android:visibility="gone"/>

    <ImageView
        android:id="@+id/activity_entermobile_iv_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="30dp"
        android:clipToPadding="false"
        android:elevation="20dp"
        app:srcCompat="@drawable/circular_arrow_forward" />
</RelativeLayout>
